# vacuum

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: adapter.rs  cleaner.rs  cli.rs  display.rs  interactive.rs  main.rs  scanner.rs
src/adapters/: cargo.rs  gitignore.rs  go.rs  gradle.rs  maven.rs  mod.rs  node.rs  ocaml.rs  python.rs
src/interactive/: adapter_select.rs  delete_phase.rs  mod.rs  scan_phase.rs  target_select.rs  types.rs
tests/: cargo_adapter.rs  edge_cases.rs  gitignore_adapter.rs  go_adapter.rs  gradle_adapter.rs  integration.rs  maven_adapter.rs  mixed_project.rs  node_adapter.rs  ocaml_adapter.rs  python_adapter.rs
tests/common/: mod.rs
