[package]
name = "vacuum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vacuum"
path = "src/main.rs"

[dependencies]
anyhow        = "1"
bytesize      = "1"
clap          = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
crossterm     = "0.28"
ignore        = "0.4"
indicatif     = "0.18"
owo-colors    = { version = "4", features = ["supports-colors"] }
rayon         = "1"
ratatui       = "0.29"
walkdir       = "2"

[dev-dependencies]
tempfile = "3"
